[package]
name = "rust-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "3"
